Finished pozole recipe

--- a/recipes/churros.html
+++ b/recipes/churros.html
@@ -73,7 +73,7 @@
         to a simmer. Pour hot cream over chocolate chips and let sit 2 minutes.
         Add cinnamon and salt and whisk to combine.
       </li>
-      <li>Serve churros with chocolate dipping sauce.</li>
+      <li>Serve churros with chocolate dipping sauce. Enjoy!</li>
     </ol>
     <p>
       <em
@@ -82,5 +82,6 @@
         better!
       </em>
     </p>
+    <p><a href="/index.html">Home</a></p>
   </body>
 </html>
