--- a/recipes/pozole.html
+++ b/recipes/pozole.html
@@ -7,10 +7,61 @@
   </head>
   <body>
     <h1>Pozole</h1>
-    <h4>
+    <img
+      src="../img/pozole.jpg"
+      alt="Pozole Soup in a dish"
+      width="300"
+      height="300"
+    />
+    <p>
       To elevate the warmth of your evening, indulge in the savory delight of
       our 🍲 <strong>Pozole</strong> a soul-soothing masterpiece that will leave
       you longing for more.
-    </h4>
+    </p>
+    <h3>Ingredients</h3>
+    <ul>
+      <li>3 lb. pork shoulder, cut into 2" pieces</li>
+      <li>Kosher salt</li>
+      <li>Freshly ground black pepper</li>
+      <li>1 large yellow onion, quartered</li>
+      <li>3 cloves garlic, sliced</li>
+      <li>4 c. low-sodium chicken broth</li>
+      <li>1 tsp. cumin seeds</li>
+      <li>1 bay leaf</li>
+      <li>2 dried ancho chiles, stem and seeds removed</li>
+      <li>2 dried chiles de árbol, stem and seeds removed</li>
+      <li>2 dried guajillo chiles, stem and seeds removed</li>
+      <li>3 (15-oz.) cans hominy, drained, rinsed</li>
+      <li>
+        Thinly sliced radishes, thinly sliced green cabbage, and chopped fresh
+        cilantro, for serving
+      </li>
+    </ul>
+    <h3>Directions</h3>
+    <ol>
+      <li>
+        In a large bowl, season pork with salt and pepper. In a large pot over
+        medium heat, combine pork, onion, garlic, broth, cloves, cumin seeds,
+        and bay leaf. Add enough water to cover pork by 2". Bring to a boil,
+        then cover, reduce heat to medium-low, and bring to a simmer. Cook,
+        skimming foam off top as needed, 1 hour 30 minutes.
+      </li>
+      <li>
+        Meanwhile, in a medium heatproof bowl, soak chiles in 2 cups boiling
+        water for 30 minutes.
+      </li>
+      <li>
+        Transfer chiles and about 1/2 cup soaking liquid to a blender. Blend
+        until smooth, adding more water as needed.
+      </li>
+      <li>
+        Add chile puree and hominy to pot with pork. Cover and continue to
+        simmer, stirring occasionally, until pork is very tender, about 1 hour
+        30 minutes more; season with salt and pepper.
+      </li>
+      <li>Top pozole with radishes, cabbage, and cilantro.</li>
+      <li>Enjoy</li>
+    </ol>
+    <p><a href="/index.html">Home</a></p>
   </body>
 </html>
