--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -10,7 +10,7 @@
     <img
       src="../img/tacos.jpg"
       alt="Delicious fish tacos served on a plate"
-      width="600"
+      width="300"
       height="300"
     />
     <!--../../../ To find folder above-->
@@ -71,5 +71,6 @@
       </li>
       <li>Enjoy!</li>
     </ol>
+    <p><a href="/index.html">Home</a></p>
   </body>
 </html>
