Index link fix at Home button

--- a/recipes/churros.html
+++ b/recipes/churros.html
@@ -82,6 +82,6 @@
         better!
       </em>
     </p>
-    <p><a href="/index.html">Home</a></p>
+    <p><a href="../index.html">Home</a></p>
   </body>
 </html>
