--- a/recipes/pozole.html
+++ b/recipes/pozole.html
@@ -62,6 +62,6 @@
       <li>Top pozole with radishes, cabbage, and cilantro.</li>
       <li>Enjoy</li>
     </ol>
-    <p><a href="/index.html">Home</a></p>
+    <p><a href="../index.html">Home</a></p>
   </body>
 </html>
