--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -71,6 +71,6 @@
       </li>
       <li>Enjoy!</li>
     </ol>
-    <p><a href="/index.html">Home</a></p>
+    <p><a href="../index.html">Home</a></p>
   </body>
 </html>
