--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Abuela's Cuisine</title>
+    <link rel="icon" type="image/x" href="img/favicon.ico">
   </head>
   <body>
     <h1>Odin Recipes</h1>
