--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <title>Abuela's Cuisine</title>
-    <link rel="icon" type="image/x" href="img/favicon.ico">
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" type="image/x" href="img/favicon.ico" />
   </head>
   <body>
-    <h1>Odin Recipes</h1>
-    <h2>🌵Abuela's Cuisine🌵</h2>
+    <h1>🌵Abuela's Cuisine🌵</h1>
     <img
-      src="img/abuela.png"
-      alt="Julieta, our sweet and kind abuela"
+      src="img/Abuela.png"
+      alt"Our sweet grandmother at our kitchen"
       width="300"
       height="300"
     />
