--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>🌵Abuela's Cuisine🌵</h1>
     <img
-      src="img/Abuela.png"
+      src="img/abuela.png"
       alt"Our sweet grandmother at our kitchen"
       width="300"
       height="300"
